# projet-python

./: README.md  api.py  main.py  ps5-dataframe.pickle  pyproject.toml  schemas.py  scraping_coinafrique.py  teams_data.db
